fixing some code...

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -36,3 +36,4 @@ management.endpoint.health.show-details=always
 cron.scheduled.process.events.stan.lockAtLeastFor=${CRON_SCHEDULED_PROCESS_EVENTS_STAN_LOCK_AT_LEAST_FOR}
 cron.scheduled.process.events.stan.lockAtMostFor=${CRON_SCHEDULED_PROCESS_EVENTS_STAN_LOCK_AT_MOST_FOR}
 cron.scheduled.process.events.stan=${CRON_SCHEDULED_PROCESS_EVENTS_STAN}
+logging.level.io.nats=TRACE
