--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -37,3 +37,5 @@ cron.scheduled.process.events.stan.lockAtLeastFor=${CRON_SCHEDULED_PROCESS_EVENT
 cron.scheduled.process.events.stan.lockAtMostFor=${CRON_SCHEDULED_PROCESS_EVENTS_STAN_LOCK_AT_MOST_FOR}
 cron.scheduled.process.events.stan=${CRON_SCHEDULED_PROCESS_EVENTS_STAN}
 logging.level.io.nats=TRACE
+logging.level.org.hibernate.sql=${HIBERNATE_SQL_LOG_LEVEL}
+logging.level.org.hibernate.type=${HIBERNATE_PARAM_LOG_LEVEL}
