some code fixes...

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -39,3 +39,5 @@ cron.scheduled.process.events.stan=${CRON_SCHEDULED_PROCESS_EVENTS_STAN}
 logging.level.io.nats=TRACE
 logging.level.org.hibernate.sql=${HIBERNATE_SQL_LOG_LEVEL}
 logging.level.org.hibernate.type=${HIBERNATE_PARAM_LOG_LEVEL}
+spring.datasource.hikari.minimum-idle=4
+spring.datasource.hikari.maximum-pool-size=4
