code changes to handle student update...

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -26,7 +26,7 @@ logging.logback.rollingpolicy.max-history=1
 logging.pattern.file=%d | [${HOSTNAME}] | %clr(%5p) | [%t] | [%logger{36}:%L] | [%M] | %msg%n
 client.id=${CLIENT_ID}
 client.secret=${CLIENT_SECRET}
-token.url=${TOKEN_URL}
+url.token=${TOKEN_URL}
 spring.security.oauth2.resourceserver.jwt.issuer-uri=${TOKEN_ISSUER_URL}
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${TOKEN_ISSUER_URL}/protocol/openid-connect/certs
 stan.url=${NATS_URL}
@@ -41,3 +41,5 @@ logging.level.org.hibernate.sql=${HIBERNATE_SQL_LOG_LEVEL}
 logging.level.org.hibernate.type=${HIBERNATE_PARAM_LOG_LEVEL}
 spring.datasource.hikari.minimum-idle=4
 spring.datasource.hikari.maximum-pool-size=4
+#Below are for making API calls to Student after getting the token.
+url.api.student=${STUDENT_API_URL}
