--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -39,7 +39,7 @@ cron.scheduled.process.events.stan=${CRON_SCHEDULED_PROCESS_EVENTS_STAN}
 logging.level.io.nats=TRACE
 logging.level.org.hibernate.sql=${HIBERNATE_SQL_LOG_LEVEL}
 logging.level.org.hibernate.type=${HIBERNATE_PARAM_LOG_LEVEL}
-spring.datasource.hikari.minimum-idle=10
-spring.datasource.hikari.maximum-pool-size=12
+spring.datasource.hikari.maximum-pool-size=${DB_CONNECTION_MAX_POOL_SIZE}
+spring.datasource.hikari.minimum-idle=${DB_CONNECTION_MIN_IDLE}
 #Below are for making API calls to Student after getting the token.
 url.api.student=${STUDENT_API_URL}
