--- a/api/pom.xml
+++ b/api/pom.xml
@@ -13,7 +13,8 @@
 
   <properties>
     <sonar.language>java</sonar.language>
-    <sonar.exclusions>src/main/resources/**
+    <sonar.exclusions>src/main/resources/**,
+      src/main/java/ca/bc/gov/educ/api/pen/replication/helpers/**,
     </sonar.exclusions>
     <java.version>11</java.version>
 
