--- a/api/src/test/resources/application.properties
+++ b/api/src/test/resources/application.properties
@@ -22,7 +22,7 @@ logging.logback.rollingpolicy.max-file-size=20MB
 logging.logback.rollingpolicy.clean-history-on-start=true
 logging.logback.rollingpolicy.max-history=1
 logging.pattern.file={"timeStamp":"%d{yyyy-MM-dd hh:mm:ss.SSS}","level":"%3p" ,"thread":"%t" ,"class":"%logger{36}","msg":"%replace(%msg){'[\n\r\"]',''}", "Exception":"%replace(%rEx{5}){'[\n\r\"]',''}"} %nopex %n
-logging.pattern.console=%d{yyyy-MM-dd hh:mm:ss.SSS} | [${HOSTNAME}] | %clr(%5p) | [%t]   | %logger{36}:%L | %replace(%msg){'[\n\r\"]',''} |%replace(%rEx{5}){'[\n\r\"]',''} %nopex %n
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss.SSS} | [%5p] | [%t] | [%logger{36}] | [%replace(%msg){'[\n\r\"]',''} %X{messageEvent}] | %replace(%rEx{10}){'[\n\r\"]',''}%nopex%n
 client.id=123
 client.secret=123
 url.token=http://abcxyz.com
