--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -42,3 +42,4 @@ spring.datasource.hikari.maximum-pool-size=${DB_CONNECTION_MAX_POOL_SIZE}
 spring.datasource.hikari.minimum-idle=${DB_CONNECTION_MIN_IDLE}
 #Below are for making API calls to Student after getting the token.
 url.api.student=${STUDENT_API_URL}
+spring.flyway.table=FLYWAY_SCHEMA_HISTORY
