intermittent commit to avoid loss of code...

--- a/api/src/test/resources/application.properties
+++ b/api/src/test/resources/application.properties
@@ -41,3 +41,9 @@ spring.datasource.hikari.maximum-pool-size=4
 spring.datasource.hikari.minimum-idle=4
 #Below are for making API calls to Student after getting the token.
 url.api.student=http://test
+spring.data.redis.repositories.enabled=false
+spring.redis.host=localhost
+spring.redis.port=6370
+cron.scheduled.process.records.transaction=-
+cron.scheduled.process.records.transaction.lockAtLeastFor=800ms
+cron.scheduled.process.records.transaction.lockAtMostFor=900ms
