--- a/api/pom.xml
+++ b/api/pom.xml
@@ -25,9 +25,11 @@
     <shedlock.version>4.20.0</shedlock.version>
     <springdoc.version>1.5.2</springdoc.version>
     <lombok.version>1.18.12</lombok.version>
-    <nats.version>2.11.0</nats.version>
+    <nats.version>2.11.5</nats.version>
     <ojdbc.version>12.2.0.1</ojdbc.version>
     <guava.version>30.1.1-jre</guava.version>
+    <embedded-redis.version>0.7.3</embedded-redis.version>
+    <redisson.version>3.15.1</redisson.version><!-- DO NOT CHANGE -->
   </properties>
 
   <parent>
@@ -197,6 +199,17 @@
       <groupId>io.nats</groupId>
       <artifactId>jnats</artifactId>
       <version>${nats.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.redisson</groupId>
+      <artifactId>redisson-spring-boot-starter</artifactId>
+      <version>${redisson.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>it.ozimov</groupId>
+      <artifactId>embedded-redis</artifactId>
+      <version>${embedded-redis.version}</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
   <build>
