--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -45,3 +45,4 @@ url.api.student=${STUDENT_API_URL}
 spring.flyway.table=FLYWAY_SCHEMA_HISTORY
 spring.flyway.baseline-on-migrate=true
 spring.flyway.baseline-version=0
+spring.data.redis.repositories.enabled=false
