--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -46,3 +46,6 @@ spring.flyway.table=FLYWAY_SCHEMA_HISTORY
 spring.flyway.baseline-on-migrate=true
 spring.flyway.baseline-version=0
 spring.data.redis.repositories.enabled=false
+cron.scheduled.process.records.transaction=${CRON_SCHEDULED_PROCESS_RECORDS_TRANSACTION}
+cron.scheduled.process.records.transaction.lockAtLeastFor=${CRON_SCHEDULED_PROCESS_RECORDS_TRANSACTION_LOCK_AT_LEAST_FOR}
+cron.scheduled.process.records.transaction.lockAtMostFor=${CRON_SCHEDULED_PROCESS_RECORDS_TRANSACTION_LOCK_AT_MOST_FOR}
