--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -11,7 +11,7 @@ on:
     paths:
       - 'api/**'
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
     paths:
       - 'api/**'
 jobs:
