--- a/tools/jenkins/Jenkinsfile
+++ b/tools/jenkins/Jenkinsfile
@@ -1,7 +1,7 @@
 pipeline{
    agent any
    environment{
-      extJSHelper = '';
+      extJSHelper = ''
       DEBUG_OUTPUT = 'false'
 
       NAMESPACE='8878b4'
@@ -24,8 +24,8 @@ pipeline{
       DC_URL = "https://raw.githubusercontent.com/${OWNER}/${REPO_NAME}/master/tools/openshift/api.dc.ocp4.yaml"
       MIN_REPLICAS = "1"
       MAX_REPLICAS = "1"
-      MIN_CPU = "40m"
-      MAX_CPU = "80m"
+      MIN_CPU = "100m"
+      MAX_CPU = "200m"
       MIN_MEM = "500Mi"
       MAX_MEM = "750Mi"
   }
