--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -49,3 +49,6 @@ spring.data.redis.repositories.enabled=false
 cron.scheduled.process.records.transaction=${CRON_SCHEDULED_PROCESS_RECORDS_TRANSACTION}
 cron.scheduled.process.records.transaction.lockAtLeastFor=${CRON_SCHEDULED_PROCESS_RECORDS_TRANSACTION_LOCK_AT_LEAST_FOR}
 cron.scheduled.process.records.transaction.lockAtMostFor=${CRON_SCHEDULED_PROCESS_RECORDS_TRANSACTION_LOCK_AT_MOST_FOR}
+cron.scheduled.process.uncompleted.saga=${CRON_SCHEDULED_PROCESS_UNCOMPLETED_SAGA}
+cron.scheduled.process.uncompleted.saga.lockAtLeastFor=${CRON_SCHEDULED_PROCESS_UNCOMPLETED_SAGA_LOCKATLEASTFOR}
+cron.scheduled.process.uncompleted.saga.lockAtMostFor=${CRON_SCHEDULED_PROCESS_UNCOMPLETED_SAGA_LOCKATMOSTFOR}
