--- a/api/src/test/resources/application.properties
+++ b/api/src/test/resources/application.properties
@@ -47,3 +47,6 @@ spring.redis.port=6370
 cron.scheduled.process.records.transaction=-
 cron.scheduled.process.records.transaction.lockAtLeastFor=800ms
 cron.scheduled.process.records.transaction.lockAtMostFor=900ms
+cron.scheduled.process.uncompleted.saga=-
+cron.scheduled.process.uncompleted.saga.lockAtLeastFor=PT45S
+cron.scheduled.process.uncompleted.saga.lockAtMostFor=PT45S
