--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -3,7 +3,7 @@ name: API CI
 on:
   push:
     branches:
-      - master
+      - 'main'
       - 'feature/**'
       - 'Feature/**'
       - 'fix/*'
