--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -52,3 +52,4 @@ cron.scheduled.process.records.transaction.lockAtMostFor=${CRON_SCHEDULED_PROCES
 cron.scheduled.process.uncompleted.saga=${CRON_SCHEDULED_PROCESS_UNCOMPLETED_SAGA}
 cron.scheduled.process.uncompleted.saga.lockAtLeastFor=${CRON_SCHEDULED_PROCESS_UNCOMPLETED_SAGA_LOCKATLEASTFOR}
 cron.scheduled.process.uncompleted.saga.lockAtMostFor=${CRON_SCHEDULED_PROCESS_UNCOMPLETED_SAGA_LOCKATMOSTFOR}
+spring.jpa.show-sql=true
