[FIX] trying with fix delay for shorter poll duration than cron.

--- a/api/src/test/resources/application.properties
+++ b/api/src/test/resources/application.properties
@@ -44,9 +44,9 @@ url.api.student=http://test
 spring.data.redis.repositories.enabled=false
 spring.redis.host=localhost
 spring.redis.port=6370
-cron.scheduled.process.records.transaction=-
-cron.scheduled.process.records.transaction.lockAtLeastFor=800ms
-cron.scheduled.process.records.transaction.lockAtMostFor=900ms
+fix.scheduled.process.records.transaction=2000000000
+fix.scheduled.process.records.transaction.lockAtLeastFor=800ms
+fix.scheduled.process.records.transaction.lockAtMostFor=900ms
 cron.scheduled.process.uncompleted.saga=-
 cron.scheduled.process.uncompleted.saga.lockAtLeastFor=PT45S
 cron.scheduled.process.uncompleted.saga.lockAtMostFor=PT45S
