handle parallelism of concurrent saga to avoid overwhelming of resources.

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -53,3 +53,4 @@ cron.scheduled.process.uncompleted.saga=${CRON_SCHEDULED_PROCESS_UNCOMPLETED_SAG
 cron.scheduled.process.uncompleted.saga.lockAtLeastFor=${CRON_SCHEDULED_PROCESS_UNCOMPLETED_SAGA_LOCKATLEASTFOR}
 cron.scheduled.process.uncompleted.saga.lockAtMostFor=${CRON_SCHEDULED_PROCESS_UNCOMPLETED_SAGA_LOCKATMOSTFOR}
 spring.jpa.show-sql=${SPRING_JPA_SHOW_SQL}
+max.parallel.saga=${MAX_PARALLEL_SAGA}
