--- a/api/src/test/resources/application.properties
+++ b/api/src/test/resources/application.properties
@@ -50,4 +50,5 @@ fix.scheduled.process.records.transaction.lockAtMostFor=900ms
 cron.scheduled.process.uncompleted.saga=-
 cron.scheduled.process.uncompleted.saga.lockAtLeastFor=PT45S
 cron.scheduled.process.uncompleted.saga.lockAtMostFor=PT45S
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
+max.parallel.saga=10
