--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -1,6 +1,7 @@
 name: API CI
 
 on:
+  workflow_dispatch:
   push:
     branches:
       - 'main'
@@ -43,11 +44,11 @@ jobs:
         with:
           path: ~/.sonar/cache
           key: ${{ runner.os }}-sonar
-      #- name: Run Sonar Analysis
-       # run: mvn -f pom.xml sonar:sonar
-        #  -Dsonar.login=${{ secrets.SONAR_TOKEN }}
-         # -Dsonar.host.url=https://sonarcloud.io
-          #-Dsonar.organization=bcgov-sonarcloud
-          #-Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
+      - name: Run Sonar Analysis
+        run: mvn -f pom.xml sonar:sonar
+          -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+          -Dsonar.host.url=https://sonarcloud.io
+          -Dsonar.organization=bcgov-sonarcloud
+          -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
         env:
           GITHUB_TOKEN: ${{ github.token }}
