--- a/api/pom.xml
+++ b/api/pom.xml
@@ -30,7 +30,7 @@
     <guava.version>30.1.1-jre</guava.version>
     <embedded-redis.version>0.7.3</embedded-redis.version>
     <redisson.version>3.15.1</redisson.version><!-- DO NOT CHANGE -->
-    <log4j.version>2.15.0</log4j.version>
+    <log4j2.version>2.15.0</log4j2.version>
   </properties>
 
   <parent>
@@ -73,17 +73,10 @@
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-api</artifactId>
-      <version>${log4j.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-core</artifactId>
-      <version>${log4j.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-to-slf4j</artifactId>
-      <version>${log4j.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.commons</groupId>
