PEN-1661: Add new scheduler to delete event records

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -54,3 +54,5 @@ cron.scheduled.process.uncompleted.saga.lockAtLeastFor=${CRON_SCHEDULED_PROCESS_
 cron.scheduled.process.uncompleted.saga.lockAtMostFor=${CRON_SCHEDULED_PROCESS_UNCOMPLETED_SAGA_LOCKATMOSTFOR}
 spring.jpa.show-sql=${SPRING_JPA_SHOW_SQL}
 max.parallel.saga=${MAX_PARALLEL_SAGA}
+purge.records.saga.after.days=${PURGE_RECORDS_SAGA_AFTER_DAYS}
+scheduled.jobs.purge.old.saga.records.cron=${SCHEDULED_JOBS_PURGE_OLD_SAGA_RECORDS_CRON}
