--- a/api/src/test/resources/application.properties
+++ b/api/src/test/resources/application.properties
@@ -52,3 +52,5 @@ cron.scheduled.process.uncompleted.saga.lockAtLeastFor=PT45S
 cron.scheduled.process.uncompleted.saga.lockAtMostFor=PT45S
 spring.jpa.show-sql=true
 max.parallel.saga=10
+purge.records.saga.after.days=0
+scheduled.jobs.purge.old.saga.records.cron=-
