--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -42,10 +42,12 @@ spring.datasource.hikari.maximum-pool-size=${DB_CONNECTION_MAX_POOL_SIZE}
 spring.datasource.hikari.minimum-idle=${DB_CONNECTION_MIN_IDLE}
 #Below are for making API calls to Student after getting the token.
 url.api.student=${STUDENT_API_URL}
+url.api.institute=${INSTITUTE_API_URL}
 spring.flyway.table=FLYWAY_SCHEMA_HISTORY
 spring.flyway.baseline-on-migrate=true
 spring.flyway.baseline-version=0
 spring.data.redis.repositories.enabled=false
+initialization.background.enabled=true
 fix.scheduled.process.records.transaction=${CRON_SCHEDULED_PROCESS_RECORDS_TRANSACTION}
 fix.scheduled.process.records.transaction.lockAtLeastFor=${CRON_SCHEDULED_PROCESS_RECORDS_TRANSACTION_LOCK_AT_LEAST_FOR}
 fix.scheduled.process.records.transaction.lockAtMostFor=${CRON_SCHEDULED_PROCESS_RECORDS_TRANSACTION_LOCK_AT_MOST_FOR}
