--- a/api/src/test/resources/application.properties
+++ b/api/src/test/resources/application.properties
@@ -54,3 +54,5 @@ spring.jpa.show-sql=true
 max.parallel.saga=10
 purge.records.saga.after.days=0
 scheduled.jobs.purge.old.saga.records.cron=-
+initialization.background.enabled=true
+url.api.institute=https://test
