--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -43,6 +43,7 @@ spring.datasource.hikari.minimum-idle=${DB_CONNECTION_MIN_IDLE}
 #Below are for making API calls to Student after getting the token.
 url.api.student=${STUDENT_API_URL}
 url.api.institute=${INSTITUTE_API_URL}
+schedule.jobs.load.codes.cron=${CODES_LOAD_CRON}
 spring.flyway.table=FLYWAY_SCHEMA_HISTORY
 spring.flyway.baseline-on-migrate=true
 spring.flyway.baseline-version=0
