--- a/api/src/test/resources/application.properties
+++ b/api/src/test/resources/application.properties
@@ -56,4 +56,4 @@ purge.records.saga.after.days=0
 scheduled.jobs.purge.old.saga.records.cron=-
 initialization.background.enabled=true
 url.api.institute=https://test
-schedule.jobs.load.codes.cron=0 22 * * *
+schedule.jobs.load.codes.cron=0 22 * * * *
