Replication for authority dates

--- a/api/src/test/resources/application.properties
+++ b/api/src/test/resources/application.properties
@@ -37,6 +37,9 @@ cron.scheduled.process.events.stan=0 0/5 * * * *
 cron.scheduled.process.events.school.dates=0 0/5 * * * *
 cron.scheduled.process.events.school.dates.lockAtLeastFor=PT4M
 cron.scheduled.process.events.school.dates.lockAtMostFor=PT4M
+cron.scheduled.process.events.authority.dates=0 0/5 * * * *
+cron.scheduled.process.events.authority.dates.lockAtLeastFor=PT4M
+cron.scheduled.process.events.authority.dates.lockAtMostFor=PT4M
 logging.level.io.nats=TRACE
 logging.level.org.hibernate.sql=INFO
 logging.level.org.hibernate.type=INFO
