--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -40,6 +40,9 @@ cron.scheduled.process.events.stan=${CRON_SCHEDULED_PROCESS_EVENTS_STAN}
 cron.scheduled.process.events.school.dates=${CRON_SCHEDULED_PROCESS_SCHOOL_DATES}
 cron.scheduled.process.events.school.dates.lockAtLeastFor=${CRON_SCHEDULED_PROCESS_EVENTS_SCHOOL_DATES_LOCK_AT_LEAST_FOR}
 cron.scheduled.process.events.school.dates.lockAtMostFor=${CRON_SCHEDULED_PROCESS_EVENTS_SCHOOL_DATES_LOCK_AT_MOST_FOR}
+cron.scheduled.process.events.authority.dates=${CRON_SCHEDULED_PROCESS_AUTHORITY_DATES}
+cron.scheduled.process.events.authority.dates.lockAtLeastFor=${CRON_SCHEDULED_PROCESS_EVENTS_AUTHORITY_DATES_LOCK_AT_LEAST_FOR}
+cron.scheduled.process.events.authority.dates.lockAtMostFor=${CRON_SCHEDULED_PROCESS_EVENTS_AUTHORITY_DATES_LOCK_AT_MOST_FOR}
 logging.level.io.nats=TRACE
 logging.level.org.hibernate.sql=${HIBERNATE_SQL_LOG_LEVEL}
 logging.level.org.hibernate.type=${HIBERNATE_PARAM_LOG_LEVEL}
