--- a/api/src/test/resources/application.properties
+++ b/api/src/test/resources/application.properties
@@ -48,8 +48,8 @@ spring.datasource.hikari.minimum-idle=4
 #Below are for making API calls to Student after getting the token.
 url.api.student=http://test
 spring.data.redis.repositories.enabled=false
-spring.redis.host=localhost
-spring.redis.port=6370
+spring.data.redis.host=localhost
+spring.data.redis.port=6370
 fix.scheduled.process.records.transaction=2000000000
 fix.scheduled.process.records.transaction.lockAtLeastFor=800ms
 fix.scheduled.process.records.transaction.lockAtMostFor=900ms
