--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.jackson.deserialization.fail-on-unknown-properties=false
 management.endpoint.metrics.enabled=true
 management.endpoints.web.exposure.include=*
 management.endpoint.prometheus.enabled=true
-management.metrics.export.prometheus.enabled=true
+management.prometheus.metrics.export.enabled=true
 spring.datasource.hikari.max-lifetime=600000
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.idle-timeout=300000
