--- a/.github/workflows/deploy-to.openshift-dev.yml
+++ b/.github/workflows/deploy-to.openshift-dev.yml
@@ -40,6 +40,7 @@ env:
 
 on:
   # https://docs.github.com/en/actions/reference/events-that-trigger-workflows
+  workflow_dispatch:
   push:
     branches:
       - main
