--- a/.github/workflows/deploy-to.openshift-prod.yml
+++ b/.github/workflows/deploy-to.openshift-prod.yml
@@ -45,7 +45,8 @@ on:
 jobs:
   openshift-ci-cd:
     name: Deploy to OpenShift PROD
-    runs-on: ubuntu-22.04
+    # ubuntu-20.04 can also be used.
+    runs-on: ubuntu-20.04
     environment: production
 
     outputs:
@@ -54,7 +55,7 @@ jobs:
 
     steps:
       - name: Check for required secrets
-        uses: actions/github-script@v7
+        uses: actions/github-script@v6
         with:
           script: |
             const secrets = {
@@ -92,7 +93,7 @@ jobs:
             }
 
       - name: Check out repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
       - name: Get latest tag
         uses: actions-ecosystem/action-get-latest-tag@v1
@@ -104,7 +105,7 @@ jobs:
           oc: 4
 
         # https://github.com/redhat-actions/oc-login#readme
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
 
       - name: Deploy API
         run: |
