Updates to support scholarships & TRAX

--- a/api/src/test/resources/application.properties
+++ b/api/src/test/resources/application.properties
@@ -62,4 +62,5 @@ purge.records.saga.after.days=0
 scheduled.jobs.purge.old.saga.records.cron=-
 initialization.background.enabled=true
 url.api.institute=https://test
+url.api.coreg=https://test
 schedule.jobs.load.codes.cron=0 22 * * * *
